--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/bmi"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.BMICalculate"
         tools:targetApi="31">
+        <activity
+            android:name=".WelcomeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_welcome"
+            android:theme="@style/Theme.BMICalculate" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
